force-app/main/default/objects/Contractor_Recruitment__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Business Address Street</label>
    <type>TextArea</type>
</CustomField>