force-app/main/default/objects/Contractor_Recruitment__c/fields/Task_ID_Recruited_For__c.field-meta.xml
<CustomField>
    <fullName>Task_ID_Recruited_For__c</fullName>
    <inlineHelpText>What specific task, if applicable, was this contractor recruited for?</inlineHelpText>
    <label>Task ID Recruited For</label>
    <length>15</length>
    <type>Text</type>
</CustomField>