force-app/main/default/objects/Contractor_Recruitment__c/fields/Tree_Insurance_Verified__c.field-meta.xml
<CustomField>
    <fullName>Tree_Insurance_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tree Insurance Verified</label>
    <type>Checkbox</type>
</CustomField>