force-app/main/default/objects/Contractor_Recruitment__c/fields/Tree_Trimming_Arborist_Certification_Lic__c.field-meta.xml
<CustomField>
    <fullName>Tree_Trimming_Arborist_Certification_Lic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tree Trimming Arborist Certification/Lic</label>
    <type>Checkbox</type>
</CustomField>