force-app/main/default/objects/Contractor_Recruitment__c/fields/Waiting_on_work__c.field-meta.xml
<CustomField>
    <fullName>Waiting_on_work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waiting on work</label>
    <type>Checkbox</type>
</CustomField>