force-app/main/default/objects/Contractor_Recruitment__c/fields/Year_Business_Started__c.field-meta.xml
<CustomField>
    <fullName>Year_Business_Started__c</fullName>
    <inlineHelpText>What year was the business founded/started?</inlineHelpText>
    <label>Year Business Started</label>
    <length>4</length>
    <type>Text</type>
</CustomField>