force-app/main/default/objects/Contractor_Recruitment__c/validationRules/Assign_Closed_Lost_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Assign_Closed_Lost_Date</fullName>
    <active>false</active>
    <description>This validation rule makes sure the closed lost date is added before moving the lead to lead stage, &quot;closed lost&quot;.</description>
    <errorConditionFormula>ISPICKVAL( Lead_Stage__c , &quot;Closed Lost&quot;)   &amp;&amp;  ISBLANK(  Closed_Lost_Date__c )</errorConditionFormula>
    <errorMessage>Please assign the closed lost date before moving the lead to, &quot;closed lost&quot;.</errorMessage>
</ValidationRule>