force-app/main/default/objects/Contractor_Recruitment__c/validationRules/Assign_Closed_Won_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Assign_Closed_Won_Date</fullName>
    <active>false</active>
    <description>This validation rule makes sure that the closed won date is added before moving the lead to closed won.</description>
    <errorConditionFormula>ISPICKVAL( Lead_Stage__c , &quot;Closed Won&quot;)   &amp;&amp;  ISBLANK( Closed_Won_Date__c )</errorConditionFormula>
    <errorMessage>Please assign the closed won date before moving to closed won.</errorMessage>
</ValidationRule>