force-app/main/default/objects/Contractor_Recruitment__c/validationRules/Closed_Won_Contractor_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Contractor_Validation</fullName>
    <active>true</active>
    <description>This validation rule will prevent recruitment records from being moved to closed won unless there is an account connected.</description>
    <errorConditionFormula>ISPICKVAL( Lead_Stage__c , &quot;Closed Won&quot;)   &amp;&amp;  ISBLANK(Account__c)</errorConditionFormula>
    <errorMessage>You can&apos;t move the lead source to &quot;closed won&quot; until the recruitment object is attached to the appropriate account.</errorMessage>
</ValidationRule>