force-app/main/default/objects/Contractor_Recruitment__c/validationRules/Contact_Required_For_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Required_For_Closed_Won</fullName>
    <active>true</active>
    <description>Contact must be entered before Contractor Recruitment Profile can be moved to &quot;Closed Won&quot;</description>
    <errorConditionFormula>ISBLANK(Contact__c) &amp;&amp;  ISPICKVAL(Lead_Stage__c, &quot;Closed Won&quot;)</errorConditionFormula>
    <errorMessage>Please enter a Contact into the Contact field before moving this Account to Closed Won</errorMessage>
</ValidationRule>