force-app/main/default/objects/Contractor_Recruitment__c/validationRules/Finance_Req_Tree_Insurance_Verified.validationRule-meta.xml
<ValidationRule>
    <fullName>Finance_Req_Tree_Insurance_Verified</fullName>
    <active>false</active>
    <description>Permission to update &quot;Tree Insurance Verified&quot; to Finance profile only</description>
    <errorConditionFormula>Tree_Insurance_Verified__c = TRUE &amp;&amp; 
$Profile.Name &lt;&gt; &quot;Finance&quot; ||
$Profile.Name &lt;&gt; &quot;System Administrator&quot; ||
$User.Alias &lt;&gt; &quot;boomi&quot;</errorConditionFormula>
    <errorMessage>You do not have permission to update this field: &quot;Tree Insurance Verified&quot; please contact Finance for assistance</errorMessage>
</ValidationRule>