force-app/main/default/objects/Contractor_Recruitment__c/validationRules/First_Job_Date_Req_For_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Job_Date_Req_For_Closed_Won</fullName>
    <active>true</active>
    <description>First Job Scheduled date is required before moving account to Closed Won</description>
    <errorConditionFormula>ISBLANK(First_Job_Scheduled_Date__c) &amp;&amp; ISPICKVAL(Lead_Stage__c, &quot;Closed Won&quot;)</errorConditionFormula>
    <errorMessage>First Job Scheduled Date must have a value before this Account can be &quot;Closed Won&quot;</errorMessage>
</ValidationRule>