force-app/main/default/objects/Contractor_Recruitment__c/validationRules/Onboarding_Validation_1st_Job_Scheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>Onboarding_Validation_1st_Job_Scheduled</fullName>
    <active>true</active>
    <description>A Date value must be entered into &quot;First Job Scheduled Date&quot; field before updating stage to &quot;First Job Scheduled&quot;</description>
    <errorConditionFormula>ISCHANGED( Lead_Stage__c) &amp;&amp; ISPICKVAL( Lead_Stage__c , &quot;First Job Scheduled&quot;) &amp;&amp; ISBLANK( First_Job_Scheduled_Date__c )</errorConditionFormula>
    <errorMessage>Please enter the Date that the First Job is Scheduled before updating Lead Stage to &quot;First Job Scheduled&quot;</errorMessage>
</ValidationRule>