force-app/main/default/objects/Contractor_Recruitment__c/validationRules/Onboarding_Validation_Account_Created.validationRule-meta.xml
<ValidationRule>
    <fullName>Onboarding_Validation_Account_Created</fullName>
    <active>true</active>
    <description>You cannot move the contractor recruitment profile stage to &quot;Account Created - Nurturing&quot; without a linked Account</description>
    <errorConditionFormula>ISPICKVAL(Lead_Stage__c, &quot;Account Created - Nurturing&quot;) &amp;&amp; ISBLANK( Account__c )</errorConditionFormula>
    <errorMessage>An Account Must be Linked before moving this lead to &quot;Account Created - Nurturing&quot;</errorMessage>
</ValidationRule>