force-app/main/default/objects/Contractor_Recruitment__c/validationRules/Onboarding_Validation_Rule_1st_Job.validationRule-meta.xml
<ValidationRule>
    <fullName>Onboarding_Validation_Rule_1st_Job</fullName>
    <active>true</active>
    <description>This validation rule will prevent leads from being moved to closed own unless the onboarding section has been filled out completely and the 1st job has been completed.</description>
    <errorConditionFormula>ISPICKVAL( Lead_Stage__c , &quot;Closed Won&quot;)   &amp;&amp;  ISBLANK( First_Job_Completed_Date__c )</errorConditionFormula>
    <errorMessage>The first job must be completed before being moved to closed won.</errorMessage>
</ValidationRule>