force-app/main/default/objects/Contractor_Recruitment__c/validationRules/Onboarding_Validation_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Onboarding_Validation_Rules</fullName>
    <active>true</active>
    <description>This validation rule makes sure the account is connected to the custom object before moving the lead stage to onboarding.</description>
    <errorConditionFormula>ISPICKVAL( Lead_Stage__c , &quot;Onboarding&quot;)   &amp;&amp;  ISBLANK(Account__c)</errorConditionFormula>
    <errorMessage>You can&apos;t move the lead source to &quot;onboarding&quot; until the recruitment object is attached to the appropriate account.</errorMessage>
</ValidationRule>