force-app/main/default/objects/Contractor_Recruitment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Lead_Stage__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Lead_Source__c</columns>
    <columns>Business_Address_State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>