force-app/main/default/objects/Contractor_Recruitment__c/listViews/Contractor_Recruitment_Contractor_Recruitment.listView-meta.xml
<ListView>
    <fullName>Contractor_Recruitment_Contractor_Recruitment</fullName>
    <filterScope>Queue</filterScope>
    <label>Contractor Recruitment</label>
    <queue>Contractor_Recruitment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>