force-app/main/default/objects/Contractor_Recruitment__c/listViews/David_s_List_Of_New_York_Contractors.listView-meta.xml
<ListView>
    <fullName>David_s_List_Of_New_York_Contractors</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Address_State__c</field>
        <operation>equals</operation>
        <value>NY</value>
    </filters>
    <filters>
        <field>Lead_Stage__c</field>
        <operation>equals</operation>
        <value>New Lead,Working,Onboarding,CBSA at Capacity</value>
    </filters>
    <label>David&apos;s List Of New York Contractors</label>
    <sharedTo>
        <roleAndSubordinates>Contractor_Recruitment</roleAndSubordinates>
    </sharedTo>
</ListView>